🐛 Fix no wrapping

--- a/static/css/snuggle.css
+++ b/static/css/snuggle.css
@@ -690,4 +690,5 @@ iframe {
 	display: flex;
 	flex-direction: row-reverse;
 	justify-content: flex-end;
+	flex-wrap: wrap;
 }
